<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.TransferActivity"
    tools:showIn="@layout/activity_transfer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffff"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/coins" />

                <EditText
                    android:id="@+id/txt_money"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:gravity="center"
                    android:hint="@string/hint_text_amount"
                    android:inputType="numberDecimal"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#ffff"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/network" />

                <EditText
                    android:id="@+id/txt_receiver"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:hint="@string/hint_text_receiver"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#ffff"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_date"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:src="@drawable/question" />

                <EditText
                    android:id="@+id/txt_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:gravity="center"
                    android:hint="@string/hint_text_reason"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_gravity="bottom|center"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_vertical_margin">

            <Button
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/btn_status_transaction"
                android:text="@string/button_save"
                android:onClick="onSaveClick"
                android:textColor="#ffff" />

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="64dp"
                android:background="@drawable/btn_status_transaction"
                android:text="@string/button_cancel"
                android:onClick="onCancelClick"
                android:textColor="#ffff" />
        </LinearLayout>
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>